--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -1,12 +1,12 @@
 @use 'variables';
 
-
+.desktop, .tablet, .phone{
 .btn {
     &-primary{
         background-color: var(--color-primary);
         border-radius: 50%;
-        height: auto;
-        width: auto;
+        height: 86px;
+        width: 86px;
         padding: 20px;
         &:hover {
             background-color: black;
@@ -18,5 +18,5 @@
         width: auto;
     }
     }
-}   
-   
+}  
+} 
